# ppx-dev

./: .gitignore  CLAUDE.md  Makefile  README.md  llm.txt  main.py  pyproject.toml
.claude/skills/: latex-writer.md
design/: api-spec.md  api.md
docker/: Dockerfile  entrypoint.sh
docs/: 2026-04-08.md  2026-04-11.md  analysis.md  diffusion.md  plan.md
docs/arxiv_md_align/: .gitignore  Makefile  example.tex  main-v1.tex  main.tex  plan.md  references.bib
docs/arxiv_md_align/notes/: 2026-03-26.md
ideas/: 2026-02-08.md  2026-02-23-refactoring.md  2026-02-24-command.md  2026-02-24-draw-command.md  2026-02-24-storage.md  2026-03-06-layout-tree.md  2026-03-07-align-tree.md  2026-03-07-alignment.md  2026-03-13-api.md  api.md  commands.md  models.md
ppx-align/: Makefile  pyproject.toml  repl.py
ppx-align/src/ppx_align/: web.py
ppx-align/src/ppx_align/cli/: main.py
ppx-align/src/ppx_align/cli/commands/: process.py  server.py
ppx-align/src/ppx_align/core/: algo.py  align.py  layout.py  md.py  storage.py  tokenizers.py  types.py
ppx-align/src/ppx_align/web/: app.py
ppx-align/src/ppx_align/web/routes/: documents.py
ppx-bench/: Makefile  pyproject.toml
ppx-bench/src/ppx_bench/cli/: main.py
ppx-bench/src/ppx_bench/core/: corrupt.py  diagram.py  precision_recall.py
ppx-ocr/: Makefile  pyproject.toml
ppx-ocr/src/ppx_ocr/cli/: main.py
ppx-ocr/src/ppx_ocr/core/: helpers.py  ocr.py  storage.py  types.py
ppx-svelte/: CLAUDE.md  README.md  api.md  package.json  pnpm-lock.yaml  vite.config.ts
ppx-svelte/src/lib/: appstate.svelte.ts
ppx-svelte/src/lib/components/: Markdown.svelte  PageImage.svelte  PageViewer.svelte  RenderMarkdownAST.svelte  RenderMarkdownASTNode.svelte  StatusBadge.svelte
ppx-svelte/src/routes/: +layout.svelte  +page.svelte  layout.css
ppx-svelte/src/routes/[filename]/: +page.svelte
ppx-svelte/src/routes/[filename]/[page_index]/: +page.svelte
ppx-svelte/src/routes/api/ppx/[...path]/: +server.ts
src/ppx/api/: app.py
src/ppx/api/routes/: documents.py  ocr.py
src/ppx/cli/: main.py
src/ppx/cli/commands/: align.py  draw.py  ocr.py  server.py
src/ppx/core/: algo.py  alignment.py  helpers.py  layout_graph.py  models.py  ocr.py  storage.py  types.py
src/ppx/core/layout/: layout_tree.py
src/ppx/web/: app.py  state.py
src/ppx/web/routes/: documents.py
tests/: test_algo.py  test_alignment.py  test_pdf.py  test_storage.py  test_structv3.py
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx
web/src/app/[[...path]]/: page.tsx
web/src/app/api/[...path]/: route.ts
web/src/components/: DocumentDetail.tsx  DocumentList.tsx  NavBar.tsx  PageDetail.tsx  Providers.tsx  Router.tsx
web/src/lib/: annotation-context.tsx  api.ts
