[project]
name = "ppx"
version = "0.1.0"
description = "OCR utilities powered by PaddleOCR with typed pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=14.0",
    "pymupdf>=1.26.7",
    "joblib>=1.5.3",
    "pandas==3.0.0",
    "fastparquet>=2025.12.0",
    "matplotlib>=3.10.8",
    "pandera>=0.29.0",
    "thefuzz>=0.22.1",
    "nltk>=3.9.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ppx = "ppx.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ppx"]
