[project]
name = "ppx-bench"
version = "0.1.0"
description = "Benchmarking for the ppx OCR pipeline"
requires-python = ">=3.12"
dependencies = [
    # add what you need
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=14.0",
    "pymupdf>=1.26.7",
    "joblib>=1.5.3",
    "pandas>=2.0",
    "fastparquet>=2025.12.0",
    "pandera>=0.29.0",
    "pillow>=10.0",
    "matplotlib>=3.7.0",
    "scipy>=1.13",
    "ppx-align",
    # paddlepaddle-gpu, paddleocr, paddlex installed separately via Makefile
]

[tool.uv.sources]
ppx-align = { path = "../ppx-align", editable = true }

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
ppx-bench = "ppx_bench.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ppx_bench"]

